# kaggle-clothing-attributes

./: .gitignore  Makefile  hello.py  pyproject.toml
configs/: config.toml
notebooks/: 01_Datasets_Generation.ipynb  01_Labels_Inspection.ipynb  02_Datasets_Generation.ipynb  README.md
scripts/: datasets_generation.py  labels_inspection.py  vgg16.py
src/kaggle_clothing_attributes/: config.py  consts.py  preprocess.py  utils.py
